ecmascript/parser/tests/test262-error-references/fail/3b473034dde14c98.js.stderr
error: Expected 2 hex characters
 --> $DIR/tests/test262-parser/fail/3b473034dde14c98.js:1:2
  |
1 | "\xx";
  |  ^^

